// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Spacer ⚠️  With margin 1`] = `
<div
  className="sc-cJSrbW kuPWaq"
>
  <div
    className="sc-gGBfsJ dTyWSd"
  >
    <p
      className="sc-bxivhb iBTcEE"
    >
      This has a margin.
    </p>
  </div>
</div>
`;

exports[`Storyshots Spacer ⚠️  With padding 1`] = `
<div
  className="sc-gGBfsJ dTyWSd"
>
  <div
    className="sc-cJSrbW hRhcAQ"
  >
    <p
      className="sc-bxivhb iBTcEE"
    >
      This has padding.
    </p>
  </div>
</div>
`;
